--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/appicon"
+        android:icon="@mipmap/appicon2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/appicon"
+        android:roundIcon="@mipmap/appicon2"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoApp">
         <activity android:name=".HistoryActivity"></activity>
